--- a/fitur_1.html
+++ b/fitur_1.html
@@ -7,6 +7,7 @@
     <title>Fitur_1</title>
   </head>
   <body>
-    <h1>Fitur 1</h1>
+    <h2>Fitur 1</h2>
+    <span>Percobaan</span>
   </body>
 </html>
