--- a/fitur_1.html
+++ b/fitur_1.html
@@ -13,5 +13,6 @@
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium sequi minima esse consectetur similique neque commodi. At possimus maiores in, esse tempore earum dolores doloremque maxime officiis, eum, deleniti eaque porro
       velit quod ullam facilis odio recusandae aperiam neque nulla fugiat alias. Obcaecati animi praesentium, vero excepturi fugiat dignissimos ut!
     </p>
+    <table></table>
   </body>
 </html>
